<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/theLunchTime"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/theLunchTimeEdit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/lunchDefault_50"
            android:gravity="center_horizontal"
            android:maxLength="3"
            android:autofillHints=""
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/minutes"
            android:gravity="bottom"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="5dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/theSleepTime"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/theSleepTimeEdit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLength="3"
            android:gravity="center_horizontal"
            android:hint="@string/sleepDefault_7"
            android:autofillHints=""
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hour"
            android:gravity="bottom"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="5dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/alarmContentView"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="20sp"/>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/arrow_down"
        android:layout_gravity="center"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/alarmContentEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alarmContent_Default"
        android:maxLength="12"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="30sp"
        android:gravity="center"
        android:autofillHints=""
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/isShockView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/isShockView"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_below="@id/isShockView"
            android:layout_marginTop="5dp"
            android:text="@string/shockAlarm_Introduce"/>

        <ToggleButton
            android:id="@+id/isShockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/shockInterValSet_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:text="@string/shockIntervalView"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/shockIntervalEdit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:maxLength="2"
            android:hint="@string/shockInterval_Default_30"
            android:autofillHints=""
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/minutes"
            android:gravity="bottom"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="5dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#d9d9d9"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:id="@+id/lunchPOT_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:focusable="true">

        <TextView
            android:id="@+id/lunchPOT_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunchPOT"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:text="@string/lunchPOT_Default"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lunchPOT_View"
            android:text="@string/lunchPOT_Introduce"
            android:layout_marginStart="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sleepPOT_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true">

        <TextView
            android:id="@+id/sleepPOT_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleepPOT"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:text="@string/sleepPOT_Default"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sleepPOT_View"
            android:text="@string/sleepPOT_Introduce"
            android:layout_marginStart="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            app:fabSize="auto"
            android:src="@drawable/alarm"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

</LinearLayout>