<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    android:focusable="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/restType_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_lunch_break"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"
                android:textColor="@color/black"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/bell_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/bell"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/todo" />

        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/time_length"
                android:gravity="center"
                android:textColor="@color/gray_time_length"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/restTimeEdit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/lunchDefault_50"
                android:textColor="@color/green_set_value"
                android:gravity="center_horizontal"
                android:maxLength="3"
                android:autofillHints=""
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/timeUnit_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/minutes"
                android:gravity="bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="5dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/alarmContentView"
            android:textColor="@color/gray_time_length"
            android:gravity="center"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/arrow_down"
            android:layout_gravity="center"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/alarmContentEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alarmContent_Default"
            android:maxLength="20"
            android:textColor="@color/green_set_value"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="20sp"
            android:gravity="center"
            android:autofillHints=""
            android:inputType="text" />

        <RelativeLayout
            android:id="@+id/pot_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/potTitle_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunchPOT"
                android:textSize="20sp"
                android:textColor="@color/gray_time_length"
                android:layout_marginStart="15dp" />

            <TextView
                android:id="@+id/period_of_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/lunchPOT_Default"
                android:textColor="@color/green_set_value"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/potIntro_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/potTitle_show"
                android:text="@string/lunchPOT_Introduce"
                android:layout_marginStart="15dp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/moreSet_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_view"
            android:textColor="#1890ff"
            android:layout_gravity="end"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/moreSet_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:id="@+id/alarmTask_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:id="@+id/alarmTaskView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/the_alarm_clock_task"
                    android:textSize="20sp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/gray_time_length"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/alarmTaskView"
                    android:text="@string/_200"
                    android:textColor="@color/green_set_value"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"/>


                <ToggleButton
                    android:id="@+id/isTaskSet_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#d9d9d9"
                android:layout_margin="10dp"/>

            <RelativeLayout
                android:id="@+id/shockTip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:id="@+id/isShockView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/isShockView"
                    android:textSize="20sp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/gray_time_length"/>

                <ImageView
                    android:id="@+id/shockLightBugHelp_IV"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="2dp"
                    android:src="@drawable/help"
                    android:layout_toEndOf="@id/isShockView"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_below="@id/isShockView"
                    android:layout_marginTop="5dp"
                    android:text="@string/shockAlarm_Introduce"/>

                <ToggleButton
                    android:id="@+id/isShockTipSet_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:checked="false"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/shockInterValSet_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:text="@string/shockIntervalView"
                    android:gravity="center"
                    android:textColor="@color/gray_time_length"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/shockIntervalEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="15sp"
                    android:maxLength="2"
                    android:hint="@string/shockInterval_Default_30"
                    android:textColor="@color/green_set_value"
                    android:autofillHints=""
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/minutes"
                    android:gravity="bottom"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="5dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:id="@+id/line_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#d9d9d9"
                android:layout_margin="10dp"/>

            <RelativeLayout
                android:id="@+id/noRingBefore_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:id="@+id/noRingBeforeTitle_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="几点前不响铃"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/gray_time_length"/>

                <TextView
                    android:id="@+id/titleBellow_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_below="@id/noRingBeforeTitle_TV"
                    android:layout_marginTop="5dp"
                    android:text="如您的入睡点不稳定，\n且不想在某个时点前的响铃吵醒身边的人，可以开启此项设置，时间到了会长震提醒。"/>

                <ToggleButton
                    android:id="@+id/noRingBefore_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:checked="false"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>


                    <!--  <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/shockContent_tv_text"
                        android:textColor="@color/gray_time_length"
                        android:gravity="center"
                        android:textSize="15sp"/>

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/arrow_down"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo" />

                    <EditText
                        android:id="@+id/shockContentEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/shockContentDefault_et_hint"
                        android:maxLength="12"
                        android:layout_marginStart="85dp"
                        android:layout_marginEnd="85dp"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@color/green_set_value"
                        android:autofillHints=""
                        android:inputType="text" /> -->

                </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>